Add new extension Panache Reactive Rest Data
Fix https://github.com/quarkusio/quarkus/issues/22554

--- a/bom/application/pom.xml
+++ b/bom/application/pom.xml
@@ -971,6 +971,16 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-hibernate-reactive-rest-data-panache</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-hibernate-reactive-rest-data-panache-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-rest-data-panache</artifactId>
                 <version>${project.version}</version>
             </dependency>
